Add content of first recipe

--- a/recipes/osh.html
+++ b/recipes/osh.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Uzbek Plov</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Uzbek Plov (Lamb and Rice Pilaf)</h1>
-</body>
+    <img
+      src="https://www.allrecipes.com/thmb/tF2YpQik8evG-vyRxpsQd17jU-k=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/4580553-2998dabe4f724ab79011677bad29a5c7.jpg"
+    />
+    <h2>Description</h2>
+    <p>
+      After searching everywhere for a Uzbek plov (lamb and rice pilaf) recipe
+      to recreate an amazing dish I tried at a Middle Eastern restaurant, I
+      decided to try making this myself. Though not authentic, it still is
+      amazing. Enjoy!
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>2 cups basmati rice</li>
+      <li>4 whole heads garlic</li>
+      <li>½ cup vegetable oil</li>
+      <li>2 pounds boneless leg of lamb, cut into 3-inch pieces</li>
+      <li>2 large onions, thinly sliced</li>
+      <li>5 large carrots, coarsely grated</li>
+      <li>½ cup fresh barberries</li>
+      <li>2 tablespoons cumin seeds</li>
+      <li>2 tablespoons coriander seeds</li>
+      <li>1 teaspoon whole black peppercorns</li>
+      <li>2 cups boiling water to cover</li>
+      <li>2 tablespoons salt</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol style="list-style-type: none">
+      <li>
+        <h3>Step 1</h3>
+        <p>
+          Place basmati rice in a large bowl; cover with warm water and set
+          aside. Wash whole heads garlic; set aside.
+        </p>
+      </li>
+      <li>
+        <h3>Step 2</h3>
+        <p>
+            Heat vegetable oil in a Dutch oven or large skillet over high heat until smoking. Add lamb; cook, turning occasionally, until evenly browned, about 10 minutes. Stir in onions; cook and stir until softened and browned, about 10 minutes. Stir in carrots; cook and stir until softened, about 10 minutes. Add barberries, cumin, coriander, and peppercorns; drop whole heads garlic into Dutch oven, stirring to evenly distribute. Reduce heat to medium. Cover and cook 30 minutes. 
+        </p>
+      </li>
+      <li>
+        <h3>Step 3</h3>
+        <p>
+            Wash and drain basmati rice with hot water; add to Dutch oven in an even layer on top of lamb. Slowly pour in 2 cups boiling water. The rice should be covered with about 3/4-inch water. Do not stir. Season with salt; reduce heat to medium-low. Cover and cook until rice is tender and liquid absorbed, about 20 minutes. Stir rice and lamb together; serve with whole garlic heads on top. 
+        </p>
+      </li>
+    </ol>
+  </body>
 </html>
