Add two more recipes to home page

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/osh.html">Uzbek Plov</a>
+        <a href="#">G'ilmindi &#128514;</a>
+        a href="#">Tuxum barak &#128523;</a>
     </body>
 </html>
