Create an ordered list for recipes

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>Odin Recipes</title>
-    </head>
-    <body>
-        <h1>Odin Recipes</h1>
-        <a href="./recipes/osh.html">Uzbek Plov</a>
-        <a href="#">G'ilmindi &#128514;</a>
-        <a href="#">Tuxum barak &#128523;</a>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Odin Recipes</title>
+  </head>
+  <body>
+    <h1>Odin Recipes</h1>
+    <ul>
+      <li><a href="./recipes/osh.html">Uzbek Plov</a></li>
+      <li><a href="#">G'ilmindi &#128514;</a></li>
+      <li><a href="#">Tuxum barak &#128523;</a></li>
+    </ul>
+  </body>
 </html>
